# rust-todo-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RETROSPECTIVE.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20230215_230759_create_todo_table.rs
src/: main.rs
src/entity/: mod.rs  todo.rs
src/handler/: mod.rs  prelude.rs  todos.rs
src/repository/: mod.rs  prelude.rs  todos.rs
